--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
-.weather-app {
-  display: block;
+.weather-app-wrapper {
   margin: 100px auto;
   max-width: 700px;
+}
+.weather-app {
   padding: 25px;
   border: 1px solid;
   border-color: rgb(188, 188, 188);
@@ -82,4 +83,5 @@ h6 {
   font-family: "Poppins", sans-serif;
   font-size: smaller;
   text-decoration: none;
+  padding: 15px 5px;
 }
