--- a/src/style.css
+++ b/src/style.css
@@ -27,26 +27,43 @@
   transform: scale(1.3);
 }
 
+.btn btn-warning {
+  max-width: 5px;
+}
+
 h1 {
   color: rgb(56, 56, 56);
-  font-size: 36px;
+  font-size: 200%;
   font-weight: bold;
+  margin: 30px 0px 0px -10px;
+}
+
+#celcius-fahrenheit {
+  font-weight: normal;
+}
+
+#celcius-fahrenheit:hover {
+  font-weight: bold;
+  transform: scale(1.3);
 }
 
 h2 {
   color: rgb(56, 56, 56);
   font-weight: bolder;
+  margin: -30px 0px 5px 0px;
 }
 
 h3 {
   color: rgb(56, 56, 56);
   font-size: 15px;
   font-style: italic;
+  margin-bottom: 30px;
 }
 
 h4 {
   color: rgb(56, 56, 56);
   font-size: 15px;
+  margin: 10px 0px;
 }
 
 h5 {
@@ -54,27 +71,29 @@ h5 {
   text-align: center;
   font-size: 110%;
   font-weight: bolder;
+  margin: 20px 0px 10px;
 }
 
 h6 {
   color: rgb(56, 56, 56);
-  text-align: right;
+  text-align: center;
   font-size: 15px;
   font-style: italic;
   padding: 5px;
 }
 
 .main-image {
-  width: 140px;
+  width: 100px;
   position: relative;
-  top: -10px;
   right: 10px;
 }
 
 .forecast-img {
   display: block;
   margin: auto;
+  padding: 5px;
   width: 60px;
+  text-align: center;
 }
 
 #github-link {
