--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 #current-location {
   border: none;
   background-color: #ffffff;
-  margin: 6px 0px 0px 2px;
+  margin: 0px 0px 0px -10px;
 }
 
 #current-location-img {
@@ -31,20 +31,40 @@
   max-width: 5px;
 }
 
+#current-temperature {
+  text-align: right;
+}
+
 h1 {
   color: rgb(56, 56, 56);
-  font-size: 200%;
+  display: inline;
+  font-size: 50px;
   font-weight: bold;
   margin: 30px 0px 0px -10px;
 }
 
-#celcius-fahrenheit {
-  font-weight: normal;
+.units {
+  color: rgb(56, 56, 56);
+  font-size: 20px;
+  font-weight: bold;
+  position: relative;
+  top: -20px;
+  right: 5px;
 }
 
-#celcius-fahrenheit:hover {
+#celcius {
+  color: rgb(56, 56, 56);
+  text-decoration: none;
+}
+
+#fahrenheit {
+  color: rgb(56, 56, 56);
+  text-decoration: none;
+}
+
+#celcius:hover {
   font-weight: bold;
-  transform: scale(1.3);
+  transform: scale(1.5);
 }
 
 h2 {
@@ -83,9 +103,9 @@ h6 {
 }
 
 .main-image {
-  width: 100px;
+  width: 125px;
   position: relative;
-  right: 10px;
+  right: 5px;
 }
 
 .forecast-img {
