--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,12 @@
   transform: scale(1.3);
 }
 
-.btn btn-warning {
-  max-width: 5px;
+.form-control {
+  max-width: 70%;
+}
+
+#search-form {
+  display: inline;
 }
 
 #current-temperature {
