--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,7 @@ h3 {
   font-size: 18px;
   font-style: italic;
   margin-bottom: 30px;
+  opacity: 0.8;
 }
 
 h4 {
@@ -123,6 +124,25 @@ h6 {
   padding: 5px;
   width: 60px;
   text-align: center;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+}
+
+.weather-forecast-temperature-max {
+  font-size: 13px;
+  font-weight: bolder;
+}
+
+.weather-forecast-temperature-min {
+  font-size: 13px;
+  opacity: 0.5;
 }
 
 #github-link {
